--- a/index.html
+++ b/index.html
@@ -1,13 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-  <title>MetaTrader</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>MetaTrader</title>
+  </head>
+  <body class="page">
+    <div class="hero">
+      <header class="header">
+        <div class="header__logo">
+          <img src="./assets/icons/logo.svg" alt="logo" />
+        </div>
+      </header>
 
-</body>
+      <div class="hero__container">
+        <h1 class="hero__title">
+          <span
+            >Trade Your
+            <img src="./assets/icons/mt.svg" alt="mt" /> MetaTrader</span
+          >
+          Accounts in One App!
+        </h1>
+
+        <div class="hero-download download">
+          <div class="hero-download__links download__links">
+            <a href="#" class="hero-download__link download__link">
+              <img src="./assets/icons/apple.svg" alt="apple store" />
+            </a>
+            <a href="#" class="hero-download__link download__link">
+              <img src="./assets/icons/android.svg" alt="google play" />
+            </a>
+          </div>
+
+          <div class="hero-download__qr download__qr">
+            <img src="./assets/icons/QR.svg" alt="QR" />
+          </div>
+
+          <p class="download__text">
+            Don't wait - download the App with MT4/MT5 included now!
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <main class="main">
+      <section class="app-yellow">
+        <div class="app-yellow__container">
+          <div class="app-yellow__info">
+            <p class="app-yellow__text">
+              Looking for a trading pl atform that brings your Metatrader
+              accounts to your fingertips?
+              <span class="app-yellow__text_bold">
+                Look no further than the App!
+              </span>
+            </p>
+          </div>
+
+          <div class="app-yellow__screenshots">
+            <div class="app-yellow__image">
+              <img src="./assets/images/app-image.png" alt="app screenshots" />
+            </div>
+          </div>
+
+          <div class="app-yellow-download">
+            <p class="app-yellow-download__text">
+              With the MT4 and MT5 platforms included, our app offers
+              unparalleled convenience and functionality for traders on-the-go.
+            </p>
+            <div class="app-yellow-download__links">
+              <a href="#" class="app-yellow-download__link">
+                <img src="./assets/icons/apple.svg" alt="apple store" />
+              </a>
+              <a href="#" class="app-yellow-download__link">
+                <img src="./assets/icons/android.svg" alt="google play" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="swiper">
+        <div class="swiper__controls">
+          <span class="swiper__control"></span>
+          <span class="swiper__control"></span>
+          <span class="swiper__control"></span>
+          <span class="swiper__control"></span>
+          <span class="swiper__control"></span>
+        </div>
+
+        <div class="swiper__container">
+          <div class="swiper__wrapper">
+            <div class="swiper__slide">
+              <div class="swiper__slide-info">
+                <h3 class="swiper__slide-title">
+                  Seamless trading & advanced charting:
+                </h3>
+                <p class="swiper__slide-subtitle">
+                  Execute trades, monitor your positions, and analyse like a pro
+                  with live charts and indicators from TradingView.
+                </p>
+              </div>
+
+              <div class="swiper__slide-image">
+                <img src="./assets/images/swiper-1.png" alt="screenshot" />
+              </div>
+            </div>
+            <div class="swiper__slide">
+              <div class="swiper__slide-info">
+                <h3 class="swiper__slide-title">Full account management:</h3>
+                <p class="swiper__slide-subtitle">
+                  Manage your trading accounts, deposit funds with 0 fees, and
+                  withdraw profits, all from within the app.
+                </p>
+              </div>
+
+              <div class="swiper__slide-image">
+                <img src="./assets/images/swiper-2.png" alt="screenshot" />
+              </div>
+            </div>
+            <div class="swiper__slide">
+              <div class="swiper__slide-info">
+                <h3 class="swiper__slide-title">
+                  Stay on top of market moves:
+                </h3>
+                <p class="swiper__slide-subtitle">
+                  Use the integrated Economic Calendar and set alerts, and
+                  receive push notifications on increased volatility or
+                  significant market moves.
+                </p>
+              </div>
+
+              <div class="swiper__slide-image">
+                <img src="./assets/images/swiper-3.png" alt="screenshot" />
+              </div>
+            </div>
+
+            <div class="swiper__slide">
+              <div class="swiper__slide-info">
+                <h3 class="swiper__slide-title">
+                  Seamless trading & advanced charting:
+                </h3>
+                <p class="swiper__slide-subtitle">
+                  Execute trades, monitor your positions, and analyse like a pro
+                  with live charts and indicators from TradingView.
+                </p>
+              </div>
+
+              <div class="swiper__slide-image">
+                <img src="./assets/images/swiper-1.png" alt="screenshot" />
+              </div>
+            </div>
+            <div class="swiper__slide">
+              <div class="swiper__slide-info">
+                <h3 class="swiper__slide-title">Full account management:</h3>
+                <p class="swiper__slide-subtitle">
+                  Manage your trading accounts, deposit funds with 0 fees, and
+                  withdraw profits, all from within the app.
+                </p>
+              </div>
+
+              <div class="swiper__slide-image">
+                <img src="./assets/images/swiper-2.png" alt="screenshot" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="download-app">
+        <div class="download-app__container">
+          <div class="download-app__top">
+            <div class="download-app__image">
+              <img src="./assets/icons/mt.svg" alt="mt" />
+            </div>
+          </div>
+
+          <p class="download-app__text">
+            Download MT4 for iOS/Android now and gain access to a wide range of
+            features & over 2100 derivatives in <span>Metals</span>,
+            <span>Energy</span>, <span>Stocks</span>, <span>Indices</span>,
+            <span>Futures</span> & more!
+          </p>
+
+          <div class="download-app__links">
+            <a class="download-app__link" href="#">
+              <img src="./assets/icons/apple.svg" alt="app store" />
+            </a>
+            <a class="download-app__link" href="#">
+              <img src="./assets/icons/android.svg" alt="play market" />
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="app-blue">
+        <div class="app-blue__container">
+          <div class="app-blue__info">
+            <p class="app-blue__text">
+              With the App, you can take your trading to the next level. Whether
+              you're an experienced trader or just starting out, our platform
+              offers the features and functionality you need to trade like a
+              pro!
+            </p>
+            <div class="app-blue-download download">
+              <div class="app-blue-download__links download__links">
+                <a href="#" class="app-blue-download__link download__link">
+                  <img src="./assets/icons/apple.svg" alt="apple store" />
+                </a>
+                <a href="#" class="app-blue-download__link download__link">
+                  <img src="./assets/icons/android.svg" alt="google play" />
+                </a>
+              </div>
+
+              <div class="app-blue-download__qr download__qr">
+                <img src="./assets/icons/QR.svg" alt="QR" />
+              </div>
+
+              <p class="download__text">
+                Don't wait - download the App with MT4/MT5 included now!
+              </p>
+            </div>
+          </div>
+
+          <div class="app-blue__image">
+            <img src="./assets/images/app-blue.png" alt="screenshot" />
+          </div>
+        </div>
+        <p class="app-blue__help">
+          Need Help? Visit our
+          <a href="#" class="app-blue__help-link">Help Section</a>
+        </p>
+      </section>
+    </main>
+
+    <script src="./js/script.js"></script>
+  </body>
 </html>
